# todo-calendar

./: .gitignore  Cargo.toml  colors.json  test.td
db-macros/: Cargo.toml
db-macros/src/: attrs.rs  field.rs  id_type.rs  lib.rs  record.rs  sql.rs
db-macros/src/attrs/: custom_derive.rs
ical_importer/: api.py  config.py  dates.py  main.py  requirements.txt  tasks.py  uploader.py
migrations/: 20250308100321_init.down.sql  20250308100321_init.up.sql  20250311151610_status.down.sql  20250311151610_status.up.sql
src/: data.rs  db.rs  error.rs  main.rs  parser.rs  router.rs  routes.rs
src/db/: category.rs  color.rs  course.rs  deadline.rs  event.rs  state.rs  task.rs  time.rs
src/parser/: string.rs
src/router/: path.rs
src/routes/: categories.rs  colors.rs  courses.rs  data.rs  deadlines.rs  events.rs  states.rs  tasks.rs  times.rs  web.rs
src/routes/deadlines/: category.rs
src/routes/events/: category.rs
web/: index.css  index.html  index.js  jsconfig.json  timeselect.css
web/js/: calendar.js  date.js  filter.js  loading.js  timeselect.js  tooltip.js
web/js/REST/: cached.js  client.js  paths.js
web/js/loading/: category.js  color.js  course.js  kanban.js  selectors.js  state.js  taskList.js  time.js
web/lib/multiselect/: lib.js
web/lib/select/: lib.js  style.css
web/lib/tabbed/: lib.js  style.css
web/multiselect/: lib.js  style.css
web/pages/add/: index.css  index.html  index.js
web/pages/index/: index.css  index.html  index.js
web/pages/settings/: index.css  index.html  index.js
web/styles/: base.css  timeselect.css
(+2 files in other folders)
